# adaptive-agent

./: .gitignore  README.md  pyproject.toml  run.sh
docs/architecture/: system-design.md
fixtures/: avatar_knight_metadata.json  example1_monsters.json  example3_dirty_rows.csv  example3_dirty_rows_cleaned.csv  example3_prompt_followup.txt  example3_prompt_initial.txt  material_lava_cave_brief.txt  roblox_coin_pickup_request.txt  roblox_damage_pad.lua  roblox_guard_npc.lua
src/adaptive_agent/: __main__.py  actions.py  approval.py  builtins.py  catalog.py  cli.py  embeddings.py  generated_tools.py  llm.py  policy.py  progress.py  runtime.py  runtime_guard.py  session.py  slash_commands.py  tool_lifecycle.py  tool_matching.py  trace.py
tests/: test_actions.py  test_approval.py  test_builtins.py  test_catalog.py  test_catalog_minimal_persistence.py  test_cli_smoke.py  test_demo_fixtures.py  test_demo_scenarios.py  test_embeddings.py  test_generated_tools.py  test_hardening_regressions.py  test_llm.py  test_progress.py  test_runtime.py  test_runtime_guard.py  test_session.py  test_slash_commands.py  test_tool_lifecycle.py  test_trace.py
